products out of stock

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -2256,9 +2256,405 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b3dcda31-d2b7-4366-be66-de9980462f2d",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3ef3642-da63-4e85-a674-f9cbd3dd6151",
+   "metadata": {},
+   "source": [
+    "##### What stores do we have to focus on currently concerning our stock?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "cd0151ad-d7b9-4fe4-ad9d-a71bf5ed467f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>store_id</th>\n",
+       "      <th>store_name</th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>product_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Santa Cruz Bikes</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Surly Ice Cream Truck Frameset - 2016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Santa Cruz Bikes</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Trek Remedy 29 Carbon Frameset - 2016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Santa Cruz Bikes</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Trek Farley Alloy Frameset - 2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Santa Cruz Bikes</td>\n",
+       "      <td>42</td>\n",
+       "      <td>Trek Fuel EX 5 27.5 Plus - 2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Santa Cruz Bikes</td>\n",
+       "      <td>92</td>\n",
+       "      <td>Haro Shredder 20 - 2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Santa Cruz Bikes</td>\n",
+       "      <td>160</td>\n",
+       "      <td>Trek Emonda SLR 6 - 2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Santa Cruz Bikes</td>\n",
+       "      <td>163</td>\n",
+       "      <td>Surly Pack Rat - 2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Santa Cruz Bikes</td>\n",
+       "      <td>168</td>\n",
+       "      <td>Surly Straggler - 2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Santa Cruz Bikes</td>\n",
+       "      <td>246</td>\n",
+       "      <td>Electra Townie Original 3i EQ Ladies' - 2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Santa Cruz Bikes</td>\n",
+       "      <td>302</td>\n",
+       "      <td>Electra Townie Original 1 - 2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Baldwin Bikes</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Electra Girl's Hawaii 1 (16-inch) - 2015/2016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Baldwin Bikes</td>\n",
+       "      <td>47</td>\n",
+       "      <td>Trek Remedy 9.8 - 2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Baldwin Bikes</td>\n",
+       "      <td>91</td>\n",
+       "      <td>Trek Precaliber 24 (21-Speed) - Girls - 2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Baldwin Bikes</td>\n",
+       "      <td>158</td>\n",
+       "      <td>Trek CrossRip 1 - 2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Baldwin Bikes</td>\n",
+       "      <td>175</td>\n",
+       "      <td>Trek Domane SLR Frameset - 2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Baldwin Bikes</td>\n",
+       "      <td>184</td>\n",
+       "      <td>Trek Domane SL 6 Disc - 2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Baldwin Bikes</td>\n",
+       "      <td>192</td>\n",
+       "      <td>Electra Townie Go! 8i - 2017/2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Baldwin Bikes</td>\n",
+       "      <td>198</td>\n",
+       "      <td>Electra Townie Commute Go! - 2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Baldwin Bikes</td>\n",
+       "      <td>251</td>\n",
+       "      <td>Electra Townie Commute Go! - 2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Baldwin Bikes</td>\n",
+       "      <td>299</td>\n",
+       "      <td>Electra Townie Original 21D - 2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Rowlett Bikes</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Surly Wednesday Frameset - 2016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Rowlett Bikes</td>\n",
+       "      <td>59</td>\n",
+       "      <td>Trek Domane S 5 Disc - 2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Rowlett Bikes</td>\n",
+       "      <td>220</td>\n",
+       "      <td>Electra Cruiser 1 Ladies' - 2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Rowlett Bikes</td>\n",
+       "      <td>259</td>\n",
+       "      <td>Electra Amsterdam Royal 8i Ladies - 2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Rowlett Bikes</td>\n",
+       "      <td>313</td>\n",
+       "      <td>Electra Townie Original 1 Ladies' - 2018</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    store_id        store_name  product_id  \\\n",
+       "0          1  Santa Cruz Bikes           6   \n",
+       "1          1  Santa Cruz Bikes           8   \n",
+       "2          1  Santa Cruz Bikes          32   \n",
+       "3          1  Santa Cruz Bikes          42   \n",
+       "4          1  Santa Cruz Bikes          92   \n",
+       "5          1  Santa Cruz Bikes         160   \n",
+       "6          1  Santa Cruz Bikes         163   \n",
+       "7          1  Santa Cruz Bikes         168   \n",
+       "8          1  Santa Cruz Bikes         246   \n",
+       "9          1  Santa Cruz Bikes         302   \n",
+       "10         2     Baldwin Bikes          22   \n",
+       "11         2     Baldwin Bikes          47   \n",
+       "12         2     Baldwin Bikes          91   \n",
+       "13         2     Baldwin Bikes         158   \n",
+       "14         2     Baldwin Bikes         175   \n",
+       "15         2     Baldwin Bikes         184   \n",
+       "16         2     Baldwin Bikes         192   \n",
+       "17         2     Baldwin Bikes         198   \n",
+       "18         2     Baldwin Bikes         251   \n",
+       "19         2     Baldwin Bikes         299   \n",
+       "20         3     Rowlett Bikes           3   \n",
+       "21         3     Rowlett Bikes          59   \n",
+       "22         3     Rowlett Bikes         220   \n",
+       "23         3     Rowlett Bikes         259   \n",
+       "24         3     Rowlett Bikes         313   \n",
+       "\n",
+       "                                     product_name  \n",
+       "0           Surly Ice Cream Truck Frameset - 2016  \n",
+       "1           Trek Remedy 29 Carbon Frameset - 2016  \n",
+       "2               Trek Farley Alloy Frameset - 2017  \n",
+       "3                 Trek Fuel EX 5 27.5 Plus - 2017  \n",
+       "4                         Haro Shredder 20 - 2017  \n",
+       "5                        Trek Emonda SLR 6 - 2018  \n",
+       "6                           Surly Pack Rat - 2018  \n",
+       "7                          Surly Straggler - 2018  \n",
+       "8    Electra Townie Original 3i EQ Ladies' - 2018  \n",
+       "9                Electra Townie Original 1 - 2018  \n",
+       "10  Electra Girl's Hawaii 1 (16-inch) - 2015/2016  \n",
+       "11                         Trek Remedy 9.8 - 2017  \n",
+       "12   Trek Precaliber 24 (21-Speed) - Girls - 2017  \n",
+       "13                         Trek CrossRip 1 - 2018  \n",
+       "14                Trek Domane SLR Frameset - 2018  \n",
+       "15                   Trek Domane SL 6 Disc - 2018  \n",
+       "16              Electra Townie Go! 8i - 2017/2018  \n",
+       "17              Electra Townie Commute Go! - 2018  \n",
+       "18              Electra Townie Commute Go! - 2018  \n",
+       "19             Electra Townie Original 21D - 2018  \n",
+       "20                Surly Wednesday Frameset - 2016  \n",
+       "21                    Trek Domane S 5 Disc - 2017  \n",
+       "22               Electra Cruiser 1 Ladies' - 2018  \n",
+       "23       Electra Amsterdam Royal 8i Ladies - 2018  \n",
+       "24       Electra Townie Original 1 Ladies' - 2018  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query=\"\"\"\n",
+    "SELECT store_id,store_name,product_id,product_name\n",
+    "FROM stores\n",
+    "LEFT JOIN stocks\n",
+    "USING (store_id)\n",
+    "LEFT JOIN products\n",
+    "USING (product_id)\n",
+    "where quantity=0\n",
+    "\"\"\"\n",
+    "execute_query(query)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbe252ce-7ed2-40fa-bfe3-30091856a597",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f922233d-4551-4552-aeda-154251a0c3fb",
+   "metadata": {},
+   "source": [
+    "##### How many products are out of stock in each store?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "fa8960fc-92e1-49d6-8ec8-76c8475262de",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>store_id</th>\n",
+       "      <th>store_name</th>\n",
+       "      <th>COUNT(product_id)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Santa Cruz Bikes</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Baldwin Bikes</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Rowlett Bikes</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   store_id        store_name  COUNT(product_id)\n",
+       "0         1  Santa Cruz Bikes                 10\n",
+       "1         2     Baldwin Bikes                 10\n",
+       "2         3     Rowlett Bikes                  5"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query=\"\"\"\n",
+    "SELECT store_id,store_name,COUNT(product_id) as pro\n",
+    "FROM stores\n",
+    "LEFT JOIN stocks\n",
+    "USING (store_id)\n",
+    "LEFT JOIN products\n",
+    "USING (product_id)\n",
+    "where quantity=0\n",
+    "GROUP BY store_id\n",
+    "\"\"\"\n",
+    "execute_query(query)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e893b80-2073-428e-9095-0fe8e1101d31",
+   "id": "dccf2907-7742-4a8a-82b0-dc710b1aa422",
    "metadata": {},
    "outputs": [],
    "source": []
