sales and revenue by month

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -2572,7 +2572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "fa8960fc-92e1-49d6-8ec8-76c8475262de",
    "metadata": {},
    "outputs": [
@@ -2599,7 +2599,7 @@
        "      <th></th>\n",
        "      <th>store_id</th>\n",
        "      <th>store_name</th>\n",
-       "      <th>COUNT(product_id)</th>\n",
+       "      <th>products_out_of_stock_count</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2626,20 +2626,20 @@
        "</div>"
       ],
       "text/plain": [
-       "   store_id        store_name  COUNT(product_id)\n",
-       "0         1  Santa Cruz Bikes                 10\n",
-       "1         2     Baldwin Bikes                 10\n",
-       "2         3     Rowlett Bikes                  5"
+       "   store_id        store_name  products_out_of_stock_count\n",
+       "0         1  Santa Cruz Bikes                           10\n",
+       "1         2     Baldwin Bikes                           10\n",
+       "2         3     Rowlett Bikes                            5"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "query=\"\"\"\n",
-    "SELECT store_id,store_name,COUNT(product_id) as pro\n",
+    "SELECT store_id,store_name,COUNT(product_id) as products_out_of_stock_count\n",
     "FROM stores\n",
     "LEFT JOIN stocks\n",
     "USING (store_id)\n",
@@ -2652,9 +2652,195 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "234d6bf4-9d86-4c74-ac18-d6657e95ad15",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15fd626f-1005-4f8e-91b6-13eee464de05",
+   "metadata": {},
+   "source": [
+    "##### When should we run sales or launch new products? What are our peak seasons?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "b4f6a4da-8d3b-4b5e-94e0-cfe51ecae143",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>month</th>\n",
+       "      <th>year</th>\n",
+       "      <th>total_revenue_thousand</th>\n",
+       "      <th>sold_item_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>04</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>1212.36</td>\n",
+       "      <td>1004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>01</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>882.19</td>\n",
+       "      <td>691</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>03</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>853.50</td>\n",
+       "      <td>799</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>02</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>669.69</td>\n",
+       "      <td>646</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>06</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>589.62</td>\n",
+       "      <td>496</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>09</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>575.46</td>\n",
+       "      <td>522</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>10</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>526.19</td>\n",
+       "      <td>558</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>08</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>524.59</td>\n",
+       "      <td>547</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>11</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>475.27</td>\n",
+       "      <td>430</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>05</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>473.50</td>\n",
+       "      <td>465</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>12</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>465.85</td>\n",
+       "      <td>449</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>07</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>440.89</td>\n",
+       "      <td>471</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   month  year  total_revenue_thousand  sold_item_count\n",
+       "0     04  2016                 1212.36             1004\n",
+       "1     01  2016                  882.19              691\n",
+       "2     03  2016                  853.50              799\n",
+       "3     02  2016                  669.69              646\n",
+       "4     06  2016                  589.62              496\n",
+       "5     09  2016                  575.46              522\n",
+       "6     10  2016                  526.19              558\n",
+       "7     08  2016                  524.59              547\n",
+       "8     11  2016                  475.27              430\n",
+       "9     05  2016                  473.50              465\n",
+       "10    12  2016                  465.85              449\n",
+       "11    07  2016                  440.89              471"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query=\"\"\"\n",
+    "SELECT strftime('%m', order_date) AS month,\n",
+    "        strftime('%Y', order_date) AS year,\n",
+    "        ROUND(SUM(oi.quantity*oi.list_price*(1-oi.discount)/1000),2) as total_revenue_thousand,\n",
+    "        SUM(oi.quantity) as sold_item_count\n",
+    "FROM orders o\n",
+    "LEFT JOIN order_items oi\n",
+    "USING (order_id)\n",
+    "GROUP BY month\n",
+    "ORDER BY total_revenue_thousand DESC,sold_item_count DESC\n",
+    "\"\"\"\n",
+    "execute_query(query)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e163d800-a46e-4d58-a857-3d9593faccb9",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e977f763-27f2-485f-bbb8-430a46401b5f",
+   "metadata": {},
+   "source": [
+    "##### Are we growing year over year? How effective are our strategic efforts over time?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dccf2907-7742-4a8a-82b0-dc710b1aa422",
+   "id": "318726f6-40cf-4fcf-89b7-155af9a5517d",
    "metadata": {},
    "outputs": [],
    "source": []
